Removed deprecated GC printing flags from H2O.init(). Mentioned flags deprecation in troubleshooting and welcome.rst. Ignoring these outdated flags in H2Odriver.java